Update seo and formatting

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 	  ]
 	}
   </script>
-  <meta name="description" content="Antarctic Music Studios in Cambridge, Ontario offers professional keyboard and saxophone session tracks, mixing, mastering, and recording services for rock, synthwave, and electronic music. Run by Alex McVittie, the studio provides live drum tracking, real amp recording, and expert music production for artists across genres.">
+  <meta name="description" content="Antarctic Music Studios in Cambridge, Ontario offers recording, mixing, mastering, keys, sax, and live drum tracking for artists across genres.">
 
-  <meta property="og:title" content="Antarctic Music Studios | Cambridge, Ontario | Keyboard, Saxophone, Mixing & Recording" />
+  <meta property="og:title" content="Antarctic Music Studios - Keys, Sax, Mixing & Recording in Ontario" />
   <meta property="og:description" content="Professional music studio in Cambridge, Ontario specializing in saxophone, keyboard, mixing, mastering, and recording. Hear our portfolio and get in touch!" />
   <meta property="og:image" content="https://antarcticstudios.ca/img/intro/headshot.webp" />
   <meta property="og:url" content="https://antarcticstudios.ca" />
@@ -67,11 +67,10 @@
 
     
     <div class="content">
-		<h1>
-        <p style="font-style: italic; margin-bottom: 1rem;">Specializing in killer sax and keyboard tracks that elevate your sound.</p>
-      </h1>
+		<h1>Antarctic Music Studios – Recording, Mixing, Mastering & Session Tracks</h1>
+			<p style="font-style: italic; margin-bottom: 1rem;">Specializing in killer sax and keyboard tracks that elevate your sound.</p>
 		<br>
-        <h1>About the Studio</h1>
+        <h2>About the Studio</h2>
       <p>
         Hi, I’m Alex McVittie, owner and operator of Antarctic Studios. I’ve been playing keys for over <span id="years-keys"></span>, sax for over <span id="years-sax"></span>, and I’ve been in more bands than I can count—everything from ska to prog rock. While I'm still in a few prog bands and have a solo synthwave project, I love helping artists take their tracks to the next level with recording, mixing, mastering, and session work.
       </p>
@@ -94,10 +93,10 @@
   </section>
 
   <section id="portfolio">
-	<h1>Music Portfolio – Session Work & Production</h1>
-	<h2>Filter by Credit</h2>
+	<h2>Music Portfolio – Session Work & Production</h2>
+	<h3>Filter by Credit</h3>
 	<div class="filter-buttons" id="filter-buttons"></div>
-	<h2>Filter by Genre</h2>
+	<h3>Filter by Genre</h3>
 	<div class="filter-buttons" id="genre-buttons"></div>
 	<div class="filter-buttons" id="clear-filters-wrapper" style="text-align: center; margin-top: 1rem; display: none;">
 	  <button id="clear-filters">Clear Filters</button>
@@ -118,7 +117,7 @@
   </section>
 
   <section id="studio-gallery">
-	<h1 style="text-align: center; margin-bottom: 1rem;">Studio Gallery</h1>
+	<h2 style="text-align: center; margin-bottom: 1rem;">Studio Gallery</h2>
 	<p style="text-align: center;">A look inside Antarctic Music Studios in Cambridge, Ontario. Explore our gear, instruments, and creative space.</p>
 	<div class="gallery-carousel" id="gallery-container" aria-label="Studio Gallery Carousel"></div>
 	<div id="lightbox" class="gallery-lightbox" aria-modal="true" role="dialog">
@@ -168,7 +167,7 @@
 
 
   <section id="equipment">
-	<h1>Studio Equipment & Gear List</h1>
+	<h2>Studio Equipment & Gear List</h2>
 	<div class="text-center">
 		<h4>Explore the microphones, instruments, amps, and software available at Antarctic Music Studios. We use professional gear for every session and production.</h4>
 		  <br>
