--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
 
     
     <div class="content">
-		<h1>Antarctic Music Studios – Recording, Mixing, Mastering & Session Tracks</h1>
-			<p style="font-style: italic; margin-bottom: 1rem;">Specializing in killer sax and keyboard tracks that elevate your sound.</p>
+		<h1>Antarctic Music Studios - Recording, Mixing, Mastering & Session Tracks</h1>
 		<br>
-        <h2>About the Studio</h2>
+		<h3><p style="font-style: italic; margin-bottom: 1rem;">Specializing in killer sax and keyboard tracks that elevate your sound.</p></h3>
+		<br>
       <p>
         Hi, I’m Alex McVittie, owner and operator of Antarctic Studios. I’ve been playing keys for over <span id="years-keys"></span>, sax for over <span id="years-sax"></span>, and I’ve been in more bands than I can count—everything from ska to prog rock. While I'm still in a few prog bands and have a solo synthwave project, I love helping artists take their tracks to the next level with recording, mixing, mastering, and session work.
       </p>
