--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Antarctic Music Studios | Cambridge, Ontario | Keyboard, Saxophone, Mixing & Recording</title>
+  <title>Antarctic Music Studios | Cambridge ON | Mixing, Recording & Production</title>
   <meta name="keywords" content="music studio, recording studio, Cambridge Ontario, saxophone session, keyboard session, mixing, mastering, synthwave, rock, electronic, session musician, Antarctic Studios, Alex McVittie, live drums, real amps, music production, audio engineering, studio gear, music portfolio, client testimonials, contact, Canada" />
   <meta name="author" content="Alex McVittie" />
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="font-awesome.min.css"/>
   <link rel ="icon" type="image/x-icon" href="img/favicon.ico">
+  <link rel="apple-touch-icon" sizes="180x180" href="img/touch.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"/>
   
   <script type="application/ld+json">
@@ -69,18 +70,18 @@
     <div class="content">
 		<h1>Antarctic Music Studios - Recording, Mixing, Mastering & Session Tracks</h1>
 		<br>
-		<h3><p style="font-style: italic; margin-bottom: 1rem;">Specializing in killer sax and keyboard tracks that elevate your sound.</p></h3>
+		<h3 style="font-style: italic; margin-bottom: 1rem;">Specializing in killer sax and keyboard tracks that elevate your sound.</h3>
 		<br>
       <p>
-        Hi, I’m Alex McVittie, owner and operator of Antarctic Studios. I’ve been playing keys for over <span id="years-keys"></span>, sax for over <span id="years-sax"></span>, and I’ve been in more bands than I can count—everything from ska to prog rock. While I'm still in a few prog bands and have a solo synthwave project, I love helping artists take their tracks to the next level with recording, mixing, mastering, and session work.
+        Hi, I’m Alex McVittie, owner and operator of Antarctic Studios, and I offer professional mixing, recording, and session work on keyboards and saxophone. I’ve been playing keys for over <span id="years-keys"></span>, sax for over <span id="years-sax"></span>, and I’ve been in more bands than I can count—everything from ska to prog rock. While I'm still in a few prog bands and have a solo synthwave project, I love helping artists take their tracks to the next level with recording, mixing, mastering, and session work.
       </p>
       <br>
       <p>
-        I specialize in adding keys and sax to rock and electronic tracks, especially the synthwave-inspired stuff—but honestly, I love working across genres. If it grooves, I’m in.
+        I specialize in adding keyboard and sax to rock and electronic tracks, especially the synthwave-inspired stuff—but honestly, I love working across genres. If it grooves, I’m in.
       </p>
       <br>
       <p>
-        The studio, located in Cambridge, Ontario, Canada, is fully equipped for live drum tracking and real amp recording, and I’m always up for collaborating with people who care about getting the feel just right. If you’re looking for someone who can bring a musical ear and a bit of personality to your project, let’s talk.
+        The studio, located in Cambridge, Ontario, Canada, is fully equipped for live drum tracking and real amp recording, and I’m always up for collaborating with people who care about getting the feel just right. I am also happy to work remotely with clients around the world, offering remote writing, mixing & mastering services. If you’re looking for someone who can bring a musical ear and a bit of personality to your project, let’s talk.
       </p>
       <br>
       <p>
