--- a/index.html
+++ b/index.html
@@ -414,9 +414,9 @@
       nav.classList.toggle('active');
     }
   </script>
-    <script src="gallery.js"></script>
-	<script src="tracks.js"></script>
-	<script src="script.js"></script>
+    <script src="gallery.js" async></script>
+	<script src="tracks.js" defer></script>
+	<script src="script.js" defer></script>
 
 </body>
 </html>
