--- a/index.html
+++ b/index.html
@@ -333,6 +333,7 @@
 						<h4>Compressors & FX Units</h4>
 						<div class="gear-grid">
 							<li>ART Pro VLA II</li>
+							<li>AudioScape 1176 Rev. A (Blue stripe) compressor</li>
 							<li>AudioScape SSL Bus Compressor</li>
 							<li>Shure M267 mixer/limiter</li>
 							<li>Sony DPS-V55 stereo FX unit</li>
