--- a/index.html
+++ b/index.html
@@ -424,9 +424,9 @@
       nav.classList.toggle('active');
     }
   </script>
-    <script src="gallery.js" async></script>
+    <script src="gallery.js" defer></script>
 	<script src="tracks.js" defer></script>
-	<script src="script.js" defer></script>
+	<script type="module" src="script.js" defer></script>
 
 </body>
 </html>
