--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
   </script>
     <script src="gallery.js" defer></script>
 	<script src="tracks.js" defer></script>
-	<script type="module" src="script.js" defer></script>
+	<script src="script.js" defer></script>
 
 </body>
 </html>
