--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       </p>
     </div>
 
-     <img src="img/intro/headshot.webp" alt="Alex McVittie – Antarctic Music Studios, Cambridge Ontario" width="320" height="320" loading="lazy">
+     <img src="img/intro/headshot.png" alt="Alex McVittie – Antarctic Music Studios, Cambridge Ontario" loading="lazy">
     
   </section>
 
