--- a/index.html
+++ b/index.html
@@ -79,18 +79,18 @@
     <div class="content">
 		<h1>Antarctic Music Studios - Recording, Mixing, Mastering & Session Tracks</h1>
 		<br>
-		<h3 style="font-style: italic; margin-bottom: 1rem;">Specializing in killer sax and keyboard tracks that elevate your sound.</h3>
+		<h3 style="font-style: italic; margin-bottom: 1rem;">Elevate your sound with smooth mixes, killer sax, and keyboard tracks.</h3>
 		<br>
       <p>
-        Hi, I’m Alex McVittie, owner and operator of Antarctic Studios, and I offer professional mixing, recording, and session work on keyboards and saxophone. I’ve been playing keys for over <span id="years-keys"></span>, sax for over <span id="years-sax"></span>, and I’ve been in more bands than I can count—everything from ska to prog rock. While I'm still in a few prog bands and have a solo synthwave project, I love helping artists take their tracks to the next level with recording, mixing, mastering, and session work.
+        Hi, I'm Alex McVittie, owner and operator of Antarctic Studios, and I offer professional mixing, recording, and session work on keyboards and saxophone. I've been playing keys for over <span id="years-keys"></span>, sax for over <span id="years-sax"></span>, and I've been in more bands than I can count—everything from ska to prog rock. While I'm still in a few prog bands and have a solo synthwave project, I love helping artists take their tracks to the next level with recording, mixing, mastering, and session work.
       </p>
       <br>
       <p>
-        I specialize in adding keyboard and sax to rock and electronic tracks, especially the synthwave-inspired stuff—but honestly, I love working across genres. If it grooves, I’m in.
+        I specialize in rock and electronic tracks, especially the synthwave-inspired stuff—but honestly, I love working across genres. If it grooves, I'm in.
       </p>
       <br>
       <p>
-        The studio, located in Cambridge, Ontario, Canada, is fully equipped for live drum tracking and real amp recording, and I’m always up for collaborating with people who care about getting the feel just right. I am also happy to work remotely with clients around the world, offering remote writing, mixing & mastering services. If you’re looking for someone who can bring a musical ear and a bit of personality to your project, let’s talk.
+        The studio, located in Cambridge, Ontario, Canada, is fully equipped for live drum tracking and real amp recording. I love collaborating with people who care about getting the feel just right. I am also happy to work remotely with clients around the world, offering remote writing, mixing & mastering services. If you're looking for someone who can bring a musical ear and a bit of personality to your project, let's talk.
       </p>
       <br>
       <p>
@@ -143,7 +143,7 @@
     <!-- Your contact form code here -->
      <div class="section-title">
 				<h2>Get in Touch</h2>	
-                <p>Every project is unique. Pricing is available upon request, and we’re happy to work with most budgets to make your vision happen. Reach out to discuss your music, session work, or production needs.</p>
+                <p>Every project is unique. Pricing is available upon request, and we're happy to work with most budgets to make your vision happen. Reach out to discuss your music, session work, or production needs.</p>
 				
 			</div>
 			<form class="contact-form" action="https://formspree.io/f/maylelbk" method="POST">
