--- a/index.html
+++ b/index.html
@@ -166,13 +166,13 @@
 				</div>
 			</form>
             <div class="ft-contact-widget">
-            <p><a href="https://instagram.com/antarcticstudios"><i class="fa-brands fa-instagram"> </i> @antarcticstudios</a></p>
-							<p><a href="https://facebook.com/antarcticstudios"><i class="fa-brands fa-facebook"></i> @antarcticstudios </a></p>
+            <p><a href="https://instagram.com/antarcticstudios" target="_blank"><i class="fa-brands fa-instagram"> </i> @antarcticstudios</a></p>
+							<p><a href="https://facebook.com/antarcticstudios" target="_blank"><i class="fa-brands fa-facebook"></i> @antarcticstudios </a></p>
 							<p><a href="mailto:alex@antarcticstudios.ca"><i class="fa fa-envelope"></i> alex@antarcticstudios.ca</a></p>
 							<p><a href="tel:+1226-279-2261"><i class="fa fa-phone"></i> (226) 279 2261</a></p>
-							<p><a href="https://maps.app.goo.gl/s5WYN4dBpCfCBZQS6"><i class="fa-solid fa-map-pin"></i> 245 St Andrews Street, Cambridge, ON</a></p>
+							<p><a href="https://maps.app.goo.gl/s5WYN4dBpCfCBZQS6" target="_blank"><i class="fa-solid fa-map-pin"></i> 245 St Andrews Street, Cambridge, ON</a></p>
 							<br>
-							<p><a href="https://credits.muso.ai/profile/aaebb6e7-05ed-4003-8c4b-5f5a7020d2d0">More credits</a></a></p>
+							<p><a href="https://credits.muso.ai/profile/aaebb6e7-05ed-4003-8c4b-5f5a7020d2d0" target="_blank">More credits</a></a></p>
             </div>
   </section>
 
