--- a/index.html
+++ b/index.html
@@ -219,6 +219,7 @@
 				<h4>Ribbon</h4>
 				<div class="gear-grid">
 					<li>MXL R144 (x2)</li>
+					<li>Boyko Designs ПPOEKT-2 MИKPOФOH</li>
 				</div>
 				<br>
 
