Add Tama Iron Cobra double bass drum pedal to gear list

--- a/index.html
+++ b/index.html
@@ -248,6 +248,7 @@
 					<h4>Drums</h4>
 					<div class="gear-grid">
 						<li>Pearl Export Poplar/Asian Mahogany shells (22" kick, 10/12/16 toms, matched 14 snare)</li>
+						<li>Tama HP900PWN Iron Cobra 900 Power Glide Double Bass Drum Pedal</li>
 						<li>Zildjian A Custom cymbals (20" medium ride, 17" fast crash, 14" hihat)</li>
 						<li>Sabian hand-hammered 5" splash/china</li>
 					</div>
