Add Adam Audio T10 Subwoofer to monitoring list

--- a/index.html
+++ b/index.html
@@ -318,6 +318,7 @@
 						<h4>Monitoring</h4>
 						<div class="gear-grid">
 							<li>Yorkville YSM6 2-way monitors <i>with SonarWorks</i></li>
+							<li>Adam Audio T10 Subwoofer</li>
 							<li>Technics 3-way HiFi speakers</li>
 							<li>Harman/Kardon HK3300 amplifier</li>
 							<li>Audio-Technica ATH-M50x headphones (x2)</li>
