Add AudioScape V3A Opto Compressor to gear list

--- a/index.html
+++ b/index.html
@@ -339,6 +339,7 @@
 							<li>ART Pro VLA II</li>
 							<li>AudioScape 1176 Rev. A (Blue stripe) compressor</li>
 							<li>AudioScape SSL Bus Compressor</li>
+							<li>AudioScape V3A Opto Compressor</li>
 							<li>Shure M267 mixer/limiter</li>
 							<li>Sony DPS-V55 stereo FX unit</li>
 							<li>SPL BiG stereo widener</li>
