--- a/index.html
+++ b/index.html
@@ -106,8 +106,11 @@
 	<h2>Music Portfolio – Session Work & Production</h2>
 	<h3>Filter by Credit</h3>
 	<div class="filter-buttons" id="filter-buttons"></div>
+	<div class="filter-buttons" id="sub-credit-buttons"></div>
+
 	<h3>Filter by Genre</h3>
 	<div class="filter-buttons" id="genre-buttons"></div>
+	<div class="filter-buttons" id="sub-genre-buttons"></div>
 	<div class="filter-buttons" id="clear-filters-wrapper" style="text-align: center; margin-top: 1rem; display: none;">
 	  <button id="clear-filters">Clear Filters</button>
 	</div>
