--- a/index.html
+++ b/index.html
@@ -105,15 +105,17 @@
   <section id="portfolio">
 	<h2>Music Portfolio – Session Work & Production</h2>
 	<h4>Filter by Credit</h4>
-	<div class="filter-buttons" id="filter-buttons"></div>
-	<div class="filter-buttons" id="sub-credit-buttons"></div>
+<div class="filter-row" id="filter-buttons"></div>
+<div class="sub-filter-row" id="sub-credit-buttons"></div>
 
-	<h4>Filter by Genre</h4>
-	<div class="filter-buttons" id="genre-buttons"></div>
-	<div class="filter-buttons" id="sub-genre-buttons"></div>
-	<div class="filter-buttons" id="clear-filters-wrapper" style="text-align: center; margin-top: 1rem; display: none;">
-	  <button id="clear-filters">Clear Filters</button>
-	</div>
+<h4>Filter by Genre</h4>
+<div class="filter-row" id="genre-buttons"></div>
+<div class="sub-filter-row" id="sub-genre-buttons"></div>
+
+<div class="filter-buttons" id="clear-filters-wrapper" 
+     style="text-align: center; margin-top: 0.5rem; display: none;">
+  <button id="clear-filters">Clear Filters</button>
+</div>
 	<h3>Click or tap on any of the tracks below to listen!</h3>
 	<div class="track-nav-wrapper">
 	  <button class="scroll-btn left" onclick="scrollTracks(-1)" aria-label="Scroll left">←</button>
