--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 <div class="filter-row" id="genre-buttons"></div>
 <div class="sub-filter-row" id="sub-genre-buttons"></div>
 
-<div class="filter-buttons" id="clear-filters-wrapper" 
+<div class="filter-row" id="clear-filters-wrapper" 
      style="text-align: center; margin-top: 0.5rem; display: none;">
   <button id="clear-filters">Clear Filters</button>
 </div>
