--- a/index.html
+++ b/index.html
@@ -117,12 +117,14 @@
   <button id="clear-filters">Clear Filters</button>
 </div>
 	<h3>Click or tap on any of the tracks below to listen!</h3>
+	<div id="mobile-track-list"></div>
 	<div class="track-nav-wrapper">
 	  <button class="scroll-btn left" onclick="scrollTracks(-1)" aria-label="Scroll left">←</button>
 	  <div id="track-list" class="track-grid"></div>
 	  <button class="scroll-btn right" onclick="scrollTracks(1)" aria-label="Scroll right">→</button>
 	</div>
 	<audio id="player" controls style="width: 100%; margin-top: 30px;" controlsList="nodownload" aria-label="Audio player for music portfolio"></audio>
+	
   </section>
 
   <section id="reviews">
